2614/2622 - LX Offer section cleanup
- Move free cancellation below offer title.
- Collapse all the offers in case of multiple offers.
- Show duration and description in offer section.
- Add passengers and bag count in case of Ground transportation.
- Added a new widget for offer description with read more. The other widget
  which already exists also has title and the read more placement is also different.

Mingle cards -
https://expedia.mingle.thoughtworks.com/projects/india_mobile_team/cards/2614
https://expedia.mingle.thoughtworks.com/projects/india_mobile_team/cards/2622

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -616,6 +616,11 @@
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">We couldn\&apos;t find any activities near you. Please retry your search with different criteria.</string>
 
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">%1$s Bags</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">%1$s Passengers</string>
+
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
     <string name="Sort_and_Filter">Sort &amp; Filter</string>
