--- a/project/src/main/res/values-ja/strings.xml
+++ b/project/src/main/res/values-ja/strings.xml
@@ -126,6 +126,13 @@
     <string name="car_types">車種</string>
     <!-- Car types checkbox filter label for a car rental-->
     <string name="car_vendors">レンタカー会社</string>
+    <!-- Button label to clear user selected filters -->
+    <string name="clear_filters">絞り込みを削除</string>
+    <!-- Label to tell the user how many products match thier filter -->
+    <plurals name="number_results_template">
+        <item quantity="one">結果 {number} 件</item>
+        <item quantity="other">結果 {number} 件</item>
+    </plurals>
 
     <!-- Checkout -->
     <!-- Car model templates-->
@@ -608,6 +615,11 @@
     <string name="lx_error_current_location_toolbar_text">もう一度お試しください</string>
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">周辺のアクティビティはありません。条件を変更して再検索してください。</string>
+
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">手荷物 %1$s 個</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">乗客 %1$s 名</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -1219,6 +1231,11 @@
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">ホテルを追加する</string>
 
+    <!-- Button label to search for an activity in the hotel city. %1$s is the city, e.g. "Washington, DC" -->
+    <string name="add_lx_TEMPLATE">%1$s の現地ツアーを検索</string>
+    <!-- Button label to search for an activity in the hotel city. Used only when we don't know the destination city. -->
+    <string name="add_lx_fallback">現地オプショナルツアーを検索</string>
+
     <!-- Car category -->
     <!-- Car category: mini -->
     <string name="car_category_mini">ミニカー</string>
@@ -1294,9 +1311,9 @@
     <string name="car_category_result_oversize">大型</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">2 ドア 自動車</string>
-    <string name="car_type_three_door">3 ドア 自動車</string>
-    <string name="car_type_four_door">4 ドア 自動車</string>
+    <string name="car_type_two_door">2 ドア自動車</string>
+    <string name="car_type_three_door">3 ドア自動車</string>
+    <string name="car_type_four_door">4 ドア自動車</string>
     <string name="car_type_van">バン</string>
     <string name="car_type_wagon">ワゴン</string>
     <string name="car_type_limousine">リムジン</string>
@@ -1934,6 +1951,9 @@
     <!-- Single Line City State Zip -->
     <string name="single_line_city_state_zip_TEMPLATE">%1$s, %2$s, %3$s</string>
 
+    <!-- Airport to LX template (e.g. "Boise, ID or Paris, France" -->
+    <string name="lx_destination_TEMPLATE">%1$s, %2$s</string>
+
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">クレジットカード番号</string>
@@ -2114,8 +2134,6 @@
     <string name="air_attach_amount_discounted_TEMPLATE">今すぐホテルを予約すると %s 割引 !</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">有効期限まで残り :</string>
-    <!-- Air attach offer expiration date -->
-    <string name="air_attach_expiration_date_TEMPLATE">%d 日</string>
     <!-- Air attach expires today alert -->
     <string name="air_attach_expires_today">本日終了</string>
     <!-- Air attach add hotel button -->
@@ -3569,5 +3587,8 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">この予約を完了をもって、%1$s、%2$s、%3$sを読み、理解したものと見なされます。</string>
+
+    <!-- Used in hotel search for specifying traveler -->
+    <string name="child_age_label">お子様の年齢を選択する</string>
 
 </resources>
