--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -125,7 +125,14 @@
     <!-- Car types checkbox filter label for a car rental-->
     <string name="car_types">차량 종류</string>
     <!-- Car types checkbox filter label for a car rental-->
-    <string name="car_vendors">렌터카 회사터카</string>
+    <string name="car_vendors">렌터카 회사</string>
+    <!-- Button label to clear user selected filters -->
+    <string name="clear_filters">필터 지우기</string>
+    <!-- Label to tell the user how many products match thier filter -->
+    <plurals name="number_results_template">
+        <item quantity="one">{number}개의 결과</item>
+        <item quantity="other">{number}개의 결과</item>
+    </plurals>
 
     <!-- Checkout -->
     <!-- Car model templates-->
@@ -609,6 +616,11 @@
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">고객님 주변의 즐길거리를 찾을 수 없습니다. 다른 기준으로 다시 검색해 주세요.</string>
 
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">짐 %1$s개</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">승객 %1$s명</string>
+
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
     <string name="Sort_and_Filter">정렬 및 필터</string>
@@ -929,7 +941,7 @@
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">일정</string>
     <!-- Menu option for going to see your trips/itineraries -->
-    <string name="Your_Trips">내 여행</string>
+    <string name="Your_Trips">내 일정</string>
     <!-- Actionbar Title on main launch screen -->
     <string name="Explore">둘러보기</string>
     <!-- Actionbar Title when an exotic destination is being displayed -->
@@ -1218,6 +1230,11 @@
     <string name="add_hotel_fallback">목적지의 호텔 추가</string>
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">호텔 추가</string>
+
+    <!-- Button label to search for an activity in the hotel city. %1$s is the city, e.g. "Washington, DC" -->
+    <string name="add_lx_TEMPLATE">%1$s에서의 즐길거리 찾기</string>
+    <!-- Button label to search for an activity in the hotel city. Used only when we don't know the destination city. -->
+    <string name="add_lx_fallback">목적지에서의 즐길거리 찾기</string>
 
     <!-- Car category -->
     <!-- Car category: mini -->
@@ -1934,6 +1951,9 @@
     <!-- Single Line City State Zip -->
     <string name="single_line_city_state_zip_TEMPLATE">%1$s, %2$s, %3$s</string>
 
+    <!-- Airport to LX template (e.g. "Boise, ID or Paris, France" -->
+    <string name="lx_destination_TEMPLATE">%1$s, %2$s</string>
+
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">신용카드 번호</string>
@@ -2114,8 +2134,6 @@
     <string name="air_attach_amount_discounted_TEMPLATE">지금 호텔을 예약하시면 %s 할인을 받으시게 됩니다!</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">혜택 만료까지 남은 시간:</string>
-    <!-- Air attach offer expiration date -->
-    <string name="air_attach_expiration_date_TEMPLATE">%d일</string>
     <!-- Air attach expires today alert -->
     <string name="air_attach_expires_today">혜택이 오늘 만료됩니다!</string>
     <!-- Air attach add hotel button -->
@@ -2947,7 +2965,7 @@
     <!-- Display for distances.  1$ is a distance, 2$ is a unit, e.g. "5 miles away" -->
     <string name="distance_template">%1$s%2$s 거리</string>
     <!-- Display for distances - but abbreviated, for space.  1$ is a distance, 2$ is a unit, e.g. "5 mi" -->
-    <string name="distance_template_short">%1$s%2$s</string>
+    <string name="distance_template_short">%1$s %2$s</string>
 
     <!-- Menu strings -->
     <!-- Label for "settings" menu item. -->
@@ -3569,5 +3587,8 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">이 예약을 완료함으로써 본인은 %1$s, %2$s 및 %3$s을 읽었으며 이를 수락하는 데 동의합니다.</string>
+
+    <!-- Used in hotel search for specifying traveler -->
+    <string name="child_age_label">각 아동의 나이 선택</string>
 
 </resources>
