--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -126,6 +126,13 @@
     <string name="car_types">ประเภทรถ</string>
     <!-- Car types checkbox filter label for a car rental-->
     <string name="car_vendors">บริษัทรถเช่า</string>
+    <!-- Button label to clear user selected filters -->
+    <string name="clear_filters">นำตัวกรองออก</string>
+    <!-- Label to tell the user how many products match thier filter -->
+    <plurals name="number_results_template">
+        <item quantity="one">{number} ผลลัพธ์</item>
+        <item quantity="other">{number} ผลลัพธ์</item>
+    </plurals>
 
     <!-- Checkout -->
     <!-- Car model templates-->
@@ -608,6 +615,11 @@
     <string name="lx_error_current_location_toolbar_text">โปรดลองอีกครั้ง</string>
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">เราไม่พบกิจกรรมใกล้ตัวคุณ โปรดลองเปลี่ยนเกณฑ์การค้นหาใหม่</string>
+
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">กระเป๋า %1$s ใบ</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">ผู้โดยสาร %1$s คน</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -1220,6 +1232,11 @@
     <string name="add_hotel_fallback">เพิ่มโรงแรมที่จุดหมายปลายทางของคุณ</string>
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">เพิ่มโรงแรม</string>
+
+    <!-- Button label to search for an activity in the hotel city. %1$s is the city, e.g. "Washington, DC" -->
+    <string name="add_lx_TEMPLATE">ค้นหากิจกรรมใน%1$s</string>
+    <!-- Button label to search for an activity in the hotel city. Used only when we don't know the destination city. -->
+    <string name="add_lx_fallback">ค้นหากิจกรรมในเมืองปลายทางของคุณ</string>
 
     <!-- Car category -->
     <!-- Car category: mini -->
@@ -1936,6 +1953,9 @@
     <!-- Single Line City State Zip -->
     <string name="single_line_city_state_zip_TEMPLATE">%1$s, %2$s, %3$s</string>
 
+    <!-- Airport to LX template (e.g. "Boise, ID or Paris, France" -->
+    <string name="lx_destination_TEMPLATE">%1$s, %2$s</string>
+
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">หมายเลขบัตรเครดิต</string>
@@ -2116,8 +2136,6 @@
     <string name="air_attach_amount_discounted_TEMPLATE">คุณจะได้รับส่วนลด %s ถ้าจองโรงแรมตอนนี้!</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">ข้อเสนอหมดเวลาใน</string>
-    <!-- Air attach offer expiration date -->
-    <string name="air_attach_expiration_date_TEMPLATE">%d วัน</string>
     <!-- Air attach expires today alert -->
     <string name="air_attach_expires_today">ดีลหมดเขตวันนี้</string>
     <!-- Air attach add hotel button -->
@@ -3571,5 +3589,8 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">ในการดำเนินการจองนี้ให้เสร็จสมบูรณ์ ฉันได้อ่านและยอมรับ %1$s, %2$s และ %3$s แล้ว</string>
+
+    <!-- Used in hotel search for specifying traveler -->
+    <string name="child_age_label">โปรดระบุอายุเด็ก</string>
 
 </resources>
