--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -126,6 +126,13 @@
     <string name="car_types">Loại xe</string>
     <!-- Car types checkbox filter label for a car rental-->
     <string name="car_vendors">Công ty cho thuê xe</string>
+    <!-- Button label to clear user selected filters -->
+    <string name="clear_filters">Xóa bộ lọc</string>
+    <!-- Label to tell the user how many products match thier filter -->
+    <plurals name="number_results_template">
+        <item quantity="one">{number} kết quả</item>
+        <item quantity="other">{number} kết quả</item>
+    </plurals>
 
     <!-- Checkout -->
     <!-- Car model templates-->
@@ -609,6 +616,11 @@
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">Chúng tôi không tìm được hoạt động giải trí gần địa điểm của quý vị. Vui lòng thử tìm lại với dữ liệu khác.</string>
 
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">%1$s túi</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">%1$s khách</string>
+
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
     <string name="Sort_and_Filter">Sắp xếp &amp; Lọc</string>
@@ -1078,7 +1090,7 @@
     <!-- Hotel confirmation code "Hotel Confirmation Code" -->
     <string name="hotel_confirmation_code_label">Mã xác nhận của Khách sạn</string>
     <!-- Passengers Label -->
-    <string name="passengers_label">Hành khách</string>
+    <string name="passengers_label">Khách</string>
     <!-- Booking info label -->
     <string name="booking_info">Thông tin đặt</string>
     <!-- Itin flight generic terminal and gate template -->
@@ -1218,6 +1230,11 @@
     <string name="add_hotel_fallback">Thêm khách sạn tại điểm đến của quý vị</string>
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">Thêm khách sạn</string>
+
+    <!-- Button label to search for an activity in the hotel city. %1$s is the city, e.g. "Washington, DC" -->
+    <string name="add_lx_TEMPLATE">Tìm hoạt động giải trí tại %1$s</string>
+    <!-- Button label to search for an activity in the hotel city. Used only when we don't know the destination city. -->
+    <string name="add_lx_fallback">Tìm hoạt động giải trí tại điểm đến</string>
 
     <!-- Car category -->
     <!-- Car category: mini -->
@@ -1934,6 +1951,9 @@
     <!-- Single Line City State Zip -->
     <string name="single_line_city_state_zip_TEMPLATE">%1$s, %2$s, %3$s</string>
 
+    <!-- Airport to LX template (e.g. "Boise, ID or Paris, France" -->
+    <string name="lx_destination_TEMPLATE">%1$s, %2$s</string>
+
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">Số thẻ tín dụng</string>
@@ -2114,8 +2134,6 @@
     <string name="air_attach_amount_discounted_TEMPLATE">Quý vị sẽ tiết kiệm %s nếu quý vị đặt phòng khách sạn ngay bây giờ!</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">Ưu đãi hết hạn vào</string>
-    <!-- Air attach offer expiration date -->
-    <string name="air_attach_expiration_date_TEMPLATE">%d ngày</string>
     <!-- Air attach expires today alert -->
     <string name="air_attach_expires_today">Ưu đãi hết hạn hôm nay</string>
     <!-- Air attach add hotel button -->
@@ -3569,5 +3587,8 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Bằng việc hoàn tất quy trình đặt, tôi đồng ý mình đã đọc và chấp thuận %1$s, %2$s và %3$s.</string>
+
+    <!-- Used in hotel search for specifying traveler -->
+    <string name="child_age_label">Chọn tuổi từng trẻ</string>
 
 </resources>
