--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -126,6 +126,13 @@
     <string name="car_types">车型</string>
     <!-- Car types checkbox filter label for a car rental-->
     <string name="car_vendors">租车公司</string>
+    <!-- Button label to clear user selected filters -->
+    <string name="clear_filters">清除筛选条件</string>
+    <!-- Label to tell the user how many products match thier filter -->
+    <plurals name="number_results_template">
+        <item quantity="one">{number} 个结果</item>
+        <item quantity="other">{number} 个结果</item>
+    </plurals>
 
     <!-- Checkout -->
     <!-- Car model templates-->
@@ -608,6 +615,11 @@
     <string name="lx_error_current_location_toolbar_text">请再试一次。</string>
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">我们找不到任何在您附近的活动。请选择其他条件，再搜索一次。</string>
+
+    <!-- Ground Transport bags text-->
+    <string name="lx_ground_transport_bags_text">%1$s 个旅行袋</string>
+    <!-- Ground Transport passengers text-->
+    <string name="lx_ground_transport_passengers_text">%1$s 位乘客</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -1218,6 +1230,11 @@
     <string name="add_hotel_fallback">添加您的目的地的酒店</string>
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">添加酒店</string>
+
+    <!-- Button label to search for an activity in the hotel city. %1$s is the city, e.g. "Washington, DC" -->
+    <string name="add_lx_TEMPLATE">查找在%1$s的活动</string>
+    <!-- Button label to search for an activity in the hotel city. Used only when we don't know the destination city. -->
+    <string name="add_lx_fallback">查找在您目的地的活动</string>
 
     <!-- Car category -->
     <!-- Car category: mini -->
@@ -1934,6 +1951,9 @@
     <!-- Single Line City State Zip -->
     <string name="single_line_city_state_zip_TEMPLATE">%1$s, %2$s, %3$s</string>
 
+    <!-- Airport to LX template (e.g. "Boise, ID or Paris, France" -->
+    <string name="lx_destination_TEMPLATE">%1$s, %2$s</string>
+
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">信用卡号码</string>
@@ -2114,8 +2134,6 @@
     <string name="air_attach_amount_discounted_TEMPLATE">如果现在订酒店，可以节省 %s！</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">优惠期限：</string>
-    <!-- Air attach offer expiration date -->
-    <string name="air_attach_expiration_date_TEMPLATE">%d 天</string>
     <!-- Air attach expires today alert -->
     <string name="air_attach_expires_today">优惠今天到期</string>
     <!-- Air attach add hotel button -->
@@ -3569,5 +3587,8 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">完成此次预订即表示，您已经阅读并接受%1$s、%2$s和%3$s。</string>
+
+    <!-- Used in hotel search for specifying traveler -->
+    <string name="child_age_label">选择每个儿童的年龄</string>
 
 </resources>
