Change list icon to text for ab test

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2361,6 +2361,8 @@
     <string name="map_search_button">Search Map</string>
     <!-- Button label for toggling to the map -->
     <string name="map_text">Map</string>
+    <!-- Button label for toggling to the hotel list -->
+    <string name="list_text">List</string>
     <!-- Label for sort hotels in hotel list -->
     <string name="sort">Sort</string>
     <!-- Label to swtich between map and list search results -->
